--- a/doc/inline_code.tex
+++ b/doc/inline_code.tex
@@ -4,5 +4,7 @@
 
 \let\oldtexttt\texttt
 \renewcommand{\texttt}[1]{
+  \setlength\fboxsep{0pt}
   \colorbox{Light}{\oldtexttt{#1}}
+  \setlength\fboxsep{3pt}
 }
